--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/node": "^20.4.2",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^7.4.0",
     "yup": "^1.2.0"
   }
